switch to (coroutine) channels, completed cli interface and epub generation