@@ -1,34 +1,66 @@
+import org.jetbrains.kotlin.gradle.dsl.JvmTarget
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
+val kotlinxCoroutines by properties
+
+val kotlinVersion by properties
+val jsr305Version by properties
+val jsoupVersion by properties
+val log4jVersion by properties
+val log4jApiKotlinVersion by properties
+val pgconvModuleName by properties
+val jdkVersion by properties
+val readability4jVersion by properties
+val guavaVersion by properties
+val epub4jVersion by properties
+val cliktVersion by properties
 
 plugins {
     java
     idea
     eclipse
-    kotlin("jvm") version "1.7.10"
+    kotlin("jvm") version "1.9.0"
     application
+    distribution
 }
 
-group = "org.github.aanno"
+group = "org.github.aanno.pgconv"
 version = "1.0-SNAPSHOT"
 
 repositories {
     mavenCentral()
 }
 
+kotlin {
+    jvmToolchain(jdkVersion.toString().toInt())
+    compilerOptions {
+        jvmTarget.set(JvmTarget.JVM_17)
+    }
+}
+
+// needed?
+java {
+    modularity.inferModulePath.set(true)
+}
+
 dependencies {
-    implementation("org.jetbrains.kotlin:kotlin-reflect:1.7.10")
-    implementation("org.jetbrains.kotlin:kotlin-stdlib:1.7.10")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
+    implementation("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
+    implementation("org.jetbrains.kotlin:kotlin-stdlib:${kotlinVersion}")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:${kotlinxCoroutines}")
 
-    implementation("com.google.code.findbugs:jsr305:3.0.2")
+    implementation("com.google.code.findbugs:jsr305:${jsr305Version}")
 
-    implementation("org.jsoup:jsoup:1.15.3")
-    implementation("info.picocli:picocli:4.6.3")
-    // implementation("com.google.guava:guava:31.1-jre")
+    implementation("org.apache.logging.log4j:log4j-slf4j-impl:${log4jVersion}")
+    implementation("com.github.ajalt.clikt:clikt:${cliktVersion}")
+    implementation("com.google.guava:guava:${guavaVersion}")
 
-    implementation("org.apache.logging.log4j:log4j-api:2.19.0")
-    implementation("org.apache.logging.log4j:log4j-core:2.19.0")
-    implementation("org.apache.logging.log4j:log4j-api-kotlin:1.2.0")
+    implementation("org.jsoup:jsoup:${jsoupVersion}")
+    implementation("net.dankito.readability4j:readability4j:${readability4jVersion}")
+    implementation("io.documentnode:epub4j-core:${epub4jVersion}")
+
+    implementation("org.apache.logging.log4j:log4j-api:${log4jVersion}")
+    implementation("org.apache.logging.log4j:log4j-core:${log4jVersion}")
+    implementation("org.apache.logging.log4j:log4j-api-kotlin:${log4jApiKotlinVersion}")
 
     testImplementation(kotlin("test"))
 }
@@ -50,7 +82,31 @@ eclipse {
 
 tasks {
     withType<KotlinCompile> {
-        kotlinOptions.jvmTarget = "17"
+        kotlinOptions {
+            jvmTarget = jdkVersion.toString()
+            moduleName = pgconvModuleName.toString()
+        }
+        compilerOptions {
+            moduleName = pgconvModuleName.toString()
+            // freeCompilerArgs.add("-module-name ${pgconvModuleName}")
+        }
+    }
+
+    // https://kotlinlang.org/docs/whatsnew19.html#compiler-option-for-kotlin-native-module-name
+    /*
+    named<org.jetbrains.kotlin.gradle.tasks.KotlinNativeCompile>("compileKotlinLinuxX64") {
+        compilerOptions {
+            moduleName.set("" + pgconvModuleName)
+        }
+    }
+     */
+
+    // https://kotlinlang.org/docs/gradle-configure-project.html#configure-with-java-modules-jpms-enabled
+    named("compileJava", JavaCompile::class.java) {
+        options.compilerArgumentProviders.add(CommandLineArgumentProvider {
+            // Provide compiled Kotlin classes to javac – needed for Java/Kotlin mixed sources to work
+            listOf("--patch-module", "${pgconvModuleName}=${sourceSets["main"].output.asPath}")
+        })
     }
 
     test {
@@ -64,5 +120,15 @@ tasks {
 
 
 application {
-    mainClass.set("MainKt")
+    // https://docs.gradle.org/current/userguide/application_plugin.html#sec:application_modular
+    mainModule = pgconvModuleName.toString()
+    mainClass = "org.github.aanno.pgconv.MainKt"
+    applicationDefaultJvmArgs = listOf(
+        // reflective access
+        // "--add-opens", "org.github.aanno.pgconv/org.github.aanno.pgconv=ALL-UNNAMED"
+        // reflective access
+        // "--add-opens", "org.github.aanno.pgconv/org.github.aanno.pgconv.impl=ALL-UNNAMED"
+        // compile-time access
+        "--add-reads", "org.github.aanno.pgconv=ALL-UNNAMED"
+    )
 }
